--- a/Halifa_Ruben_2_Dashboard_082023.ipynb
+++ b/Halifa_Ruben_2_Dashboard_082023.ipynb
@@ -2,21 +2,90 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "4c6d9347",
    "metadata": {},
    "outputs": [],
    "source": [
     "from dash import Dash, html, dash_table, dcc, callback, Output, Input, State\n",
     "import pandas as pd\n",
+    "import plotly\n",
+    "import dash\n",
     "import plotly.express as px\n",
     "import copy\n",
     "import base64\n",
     "import io\n",
     "import numpy as np\n",
     "import itertools\n",
+    "import mlflow\n",
     "from mlflow.sklearn import load_model\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3735f7ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Skipping C:\\Users\\33664\\anaconda3\\Lib\\site-packages\\typing_extensions-4.7.1.dist-info due to invalid metadata entry 'name'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pour générer le fichier requirement \n",
+    "#pip freeze > requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f1027356",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pandas Version : 1.5.3\n",
+      "Plotly Version : 5.9.0\n",
+      "Dash Version : 2.12.1\n",
+      "numpy Version : 1.23.5\n",
+      "mlflow Version : 2.6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "libraries = {\n",
+    "    \"Pandas\" : pd,\n",
+    "    \"Plotly\" : plotly,\n",
+    "    \"Dash\" : dash,\n",
+    "    \"numpy\" : np,\n",
+    "    \"mlflow\" : mlflow,\n",
+    "}\n",
+    "\n",
+    "# On affiche les différentes versions des librairies utilisées\n",
+    "for lib_name, lib in libraries.items():\n",
+    "    print(f\"{lib_name} Version : {lib.__version__}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcd2c1e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -68,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "a1461849",
    "metadata": {},
    "outputs": [],
@@ -78,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "5826a713",
    "metadata": {},
    "outputs": [],
@@ -88,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "cf6231b3",
    "metadata": {},
    "outputs": [],
@@ -101,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "0ce3a55b",
    "metadata": {},
    "outputs": [],
@@ -111,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "08d350dd",
    "metadata": {},
    "outputs": [
@@ -524,7 +593,7 @@
        "[100 rows x 104 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "d25e1a35",
    "metadata": {},
    "outputs": [
@@ -545,7 +614,7 @@
        "(100, 104)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "6be6ea85",
    "metadata": {},
    "outputs": [],
@@ -566,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "id": "a7101fb8",
    "metadata": {},
    "outputs": [
@@ -574,7 +643,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/2f/rfnwlqbn4kn5mss8s54qbyhh0000gn/T/ipykernel_18827/72085085.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\33664\\AppData\\Local\\Temp\\ipykernel_23180\\72085085.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -593,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "id": "1946c707",
    "metadata": {},
    "outputs": [
@@ -993,7 +1062,7 @@
        "[100 rows x 105 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "id": "3ca1158d",
    "metadata": {},
    "outputs": [
@@ -1054,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "id": "45934bad",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1131,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/2f/rfnwlqbn4kn5mss8s54qbyhh0000gn/T/ipykernel_18827/355609220.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\33664\\AppData\\Local\\Temp\\ipykernel_23180\\355609220.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1084,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "74473bda",
    "metadata": {},
    "outputs": [
@@ -1092,7 +1161,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/2f/rfnwlqbn4kn5mss8s54qbyhh0000gn/T/ipykernel_18827/2488000439.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\33664\\AppData\\Local\\Temp\\ipykernel_23180\\2488000439.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1107,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "0e2b63c1",
    "metadata": {},
    "outputs": [
@@ -1214,7 +1283,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "id": "0b6ec499",
    "metadata": {},
    "outputs": [],
@@ -1235,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "id": "796294c4",
    "metadata": {},
    "outputs": [],
@@ -1245,7 +1314,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
+   "id": "430d052a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var = ['AMT_ANNUITY', 'AMT_GOODS_PRICE', 'REGION_POPULATION_RELATIVE',\n",
+    "       'DAYS_REGISTRATION', 'FLAG_MOBIL', 'CNT_FAM_MEMBERS',\n",
+    "       'LIVE_REGION_NOT_WORK_REGION', 'REG_CITY_NOT_LIVE_CITY',\n",
+    "       'REG_CITY_NOT_WORK_CITY', 'LIVE_CITY_NOT_WORK_CITY', 'EXT_SOURCE_2',\n",
+    "       'OBS_30_CNT_SOCIAL_CIRCLE', 'OBS_60_CNT_SOCIAL_CIRCLE',\n",
+    "       'FLAG_DOCUMENT_2', 'AMT_REQ_CREDIT_BUREAU_YEAR',\n",
+    "       'NAME_CONTRACT_TYPE_Cash loans', 'NAME_INCOME_TYPE_Maternity leave',\n",
+    "       'NAME_INCOME_TYPE_Unemployed', 'NAME_EDUCATION_TYPE_Academic degree',\n",
+    "       'NAME_EDUCATION_TYPE_Lower secondary',\n",
+    "       'NAME_HOUSING_TYPE_Rented apartment', 'OCCUPATION_TYPE_Core staff',\n",
+    "       'OCCUPATION_TYPE_IT staff', 'OCCUPATION_TYPE_Laborers',\n",
+    "       'ORGANIZATION_TYPE_University',\n",
+    "       'FONDKAPREMONT_MODE_reg oper spec account', 'WALLSMATERIAL_MODE_Others',\n",
+    "       'WALLSMATERIAL_MODE_Wooden', 'EMERGENCYSTATE_MODE_Yes', 'PAYMENT_RATE',\n",
+    "       'BURO_DAYS_CREDIT_MIN', 'BURO_DAYS_CREDIT_MAX', 'BURO_DAYS_CREDIT_MEAN',\n",
+    "       'BURO_DAYS_CREDIT_ENDDATE_MAX', 'BURO_DAYS_CREDIT_ENDDATE_MEAN',\n",
+    "       'BURO_MONTHS_BALANCE_SIZE_SUM', 'BURO_CREDIT_ACTIVE_Bad debt_MEAN',\n",
+    "       'BURO_CREDIT_TYPE_Consumer credit_MEAN',\n",
+    "       'BURO_CREDIT_TYPE_Loan for working capital replenishment_MEAN',\n",
+    "       'BURO_CREDIT_TYPE_Unknown type of loan_MEAN', 'ACTIVE_DAYS_CREDIT_MIN',\n",
+    "       'ACTIVE_DAYS_CREDIT_MAX', 'ACTIVE_MONTHS_BALANCE_SIZE_SUM',\n",
+    "       'CLOSED_DAYS_CREDIT_MAX', 'CLOSED_DAYS_CREDIT_ENDDATE_MEAN',\n",
+    "       'CLOSED_MONTHS_BALANCE_SIZE_SUM', 'PREV_AMT_ANNUITY_MAX',\n",
+    "       'PREV_APP_CREDIT_PERC_MAX', 'PREV_AMT_GOODS_PRICE_MEAN',\n",
+    "       'PREV_HOUR_APPR_PROCESS_START_MIN', 'PREV_HOUR_APPR_PROCESS_START_MAX',\n",
+    "       'PREV_RATE_DOWN_PAYMENT_MIN', 'PREV_RATE_DOWN_PAYMENT_MAX',\n",
+    "       'PREV_RATE_DOWN_PAYMENT_MEAN', 'PREV_DAYS_DECISION_MAX',\n",
+    "       'PREV_NAME_CONTRACT_TYPE_Cash loans_MEAN',\n",
+    "       'PREV_NAME_CONTRACT_TYPE_Consumer loans_MEAN',\n",
+    "       'PREV_NAME_CASH_LOAN_PURPOSE_XNA_MEAN',\n",
+    "       'PREV_NAME_CONTRACT_STATUS_Canceled_MEAN',\n",
+    "       'PREV_NAME_CONTRACT_STATUS_Unused offer_MEAN',\n",
+    "       'PREV_NAME_PAYMENT_TYPE_Non-cash from your account_MEAN',\n",
+    "       'PREV_CODE_REJECT_REASON_CLIENT_MEAN',\n",
+    "       'PREV_CODE_REJECT_REASON_HC_MEAN', 'PREV_CODE_REJECT_REASON_SCO_MEAN',\n",
+    "       'PREV_CODE_REJECT_REASON_VERIF_MEAN',\n",
+    "       'PREV_NAME_TYPE_SUITE_Unaccompanied_MEAN',\n",
+    "       'PREV_NAME_GOODS_CATEGORY_Weapon_MEAN',\n",
+    "       'PREV_NAME_GOODS_CATEGORY_XNA_MEAN', 'PREV_NAME_PORTFOLIO_Cash_MEAN',\n",
+    "       'PREV_NAME_PORTFOLIO_POS_MEAN', 'PREV_NAME_PRODUCT_TYPE_XNA_MEAN',\n",
+    "       'PREV_NAME_PRODUCT_TYPE_x-sell_MEAN',\n",
+    "       'PREV_NAME_SELLER_INDUSTRY_Clothing_MEAN',\n",
+    "       'PREV_NAME_SELLER_INDUSTRY_XNA_MEAN', 'PREV_NAME_YIELD_GROUP_XNA_MEAN',\n",
+    "       'PREV_NAME_YIELD_GROUP_low_action_MEAN',\n",
+    "       'PREV_NAME_YIELD_GROUP_middle_MEAN',\n",
+    "       'PREV_PRODUCT_COMBINATION_Cash Street: middle_MEAN',\n",
+    "       'PREV_PRODUCT_COMBINATION_Cash X-Sell: high_MEAN',\n",
+    "       'PREV_PRODUCT_COMBINATION_POS household without interest_MEAN',\n",
+    "       'APPROVED_AMT_ANNUITY_MIN', 'APPROVED_AMT_ANNUITY_MAX',\n",
+    "       'APPROVED_AMT_APPLICATION_MAX', 'APPROVED_APP_CREDIT_PERC_MIN',\n",
+    "       'APPROVED_AMT_GOODS_PRICE_MAX', 'APPROVED_HOUR_APPR_PROCESS_START_MIN',\n",
+    "       'APPROVED_HOUR_APPR_PROCESS_START_MAX',\n",
+    "       'APPROVED_RATE_DOWN_PAYMENT_MIN', 'APPROVED_RATE_DOWN_PAYMENT_MEAN',\n",
+    "       'APPROVED_DAYS_DECISION_MAX', 'POS_MONTHS_BALANCE_MAX',\n",
+    "       'POS_MONTHS_BALANCE_MEAN', 'POS_NAME_CONTRACT_STATUS_XNA_MEAN',\n",
+    "       'INSTAL_PAYMENT_DIFF_MAX', 'INSTAL_DAYS_ENTRY_PAYMENT_MAX',\n",
+    "       'INSTAL_DAYS_ENTRY_PAYMENT_MEAN', 'INSTAL_COUNT', 'ANNEES_AGE']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "id": "a96110db",
    "metadata": {},
    "outputs": [
@@ -1276,44 +1411,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>EXT_SOURCE_2</td>\n",
-       "      <td>0.01</td>\n",
+       "      <th>57</th>\n",
+       "      <td>PREV_NAME_CASH_LOAN_PURPOSE_XNA_MEAN</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>BURO_CREDIT_TYPE_Loan for working capital repl...</td>\n",
-       "      <td>0.01</td>\n",
+       "      <th>56</th>\n",
+       "      <td>PREV_NAME_CONTRACT_TYPE_Consumer loans_MEAN</td>\n",
+       "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>PREV_NAME_TYPE_SUITE_Unaccompanied_MEAN</td>\n",
-       "      <td>0.05</td>\n",
+       "      <th>28</th>\n",
+       "      <td>EMERGENCYSTATE_MODE_Yes</td>\n",
+       "      <td>0.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>OBS_60_CNT_SOCIAL_CIRCLE</td>\n",
-       "      <td>0.06</td>\n",
+       "      <th>72</th>\n",
+       "      <td>PREV_NAME_SELLER_INDUSTRY_Clothing_MEAN</td>\n",
+       "      <td>0.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>PREV_NAME_PRODUCT_TYPE_XNA_MEAN</td>\n",
-       "      <td>0.07</td>\n",
+       "      <th>75</th>\n",
+       "      <td>PREV_NAME_YIELD_GROUP_low_action_MEAN</td>\n",
+       "      <td>0.04</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             Features  Importance\n",
-       "11                                       EXT_SOURCE_2        0.01\n",
-       "39  BURO_CREDIT_TYPE_Loan for working capital repl...        0.01\n",
-       "66            PREV_NAME_TYPE_SUITE_Unaccompanied_MEAN        0.05\n",
-       "13                           OBS_60_CNT_SOCIAL_CIRCLE        0.06\n",
-       "71                    PREV_NAME_PRODUCT_TYPE_XNA_MEAN        0.07"
+       "                                       Features  Importance\n",
+       "57         PREV_NAME_CASH_LOAN_PURPOSE_XNA_MEAN        0.00\n",
+       "56  PREV_NAME_CONTRACT_TYPE_Consumer loans_MEAN        0.02\n",
+       "28                      EMERGENCYSTATE_MODE_Yes        0.03\n",
+       "72      PREV_NAME_SELLER_INDUSTRY_Clothing_MEAN        0.03\n",
+       "75        PREV_NAME_YIELD_GROUP_low_action_MEAN        0.04"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
