Travail sur les features et le serveur

--- a/Halifa_Ruben_2_Dashboard_082023.ipynb
+++ b/Halifa_Ruben_2_Dashboard_082023.ipynb
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a5858149",
+   "id": "f0650c12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "340e7165",
+   "id": "759bdfd0",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "57248362",
+   "id": "a7d8425c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bc975424",
+   "id": "1d1472f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c1b6842d",
+   "id": "12e1c13b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "436a7f5d",
+   "id": "1486c262",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7e4e41a3",
+   "id": "c7f63a11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8d8a667e",
+   "id": "6d404566",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "90b15b89",
+   "id": "0909f81e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,8 @@
     "##### Initialize the app - incorporate css\n",
     "external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
     "app = Dash(__name__, external_stylesheets=external_stylesheets)\n",
-    "\n",
+    "server = app.server\n",
+    "#app.title = 'Sidebar'\n",
     "\n",
     "# App layout\n",
     "app.layout = html.Div([\n",
@@ -1058,7 +1059,7 @@
     "            option_client_variable = [clients for clients in selected_client]\n",
     "            if selected_client_variable is not None:\n",
     "                \n",
-    "                df1 = df_client_score[df_client_score.SK_ID_CURR == selected_client_variable]\n",
+    "                df1 = file_df_client_score[file_df_client_score.SK_ID_CURR == selected_client_variable]\n",
     "                df2 = file_df[file_df.SK_ID_CURR == selected_client_variable]\n",
     "\n",
     "                figure_feature_importance_client = figure_feature_client_dash(df1, df2, nb_variable = 10, color_point = \"plotly\", size = 18)            \n",
