--- a/Halifa_Ruben_2_Dashboard_082023.ipynb
+++ b/Halifa_Ruben_2_Dashboard_082023.ipynb
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f0650c12",
+   "id": "3decf7eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "759bdfd0",
+   "id": "78da754c",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a7d8425c",
+   "id": "0ab0f1ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1d1472f8",
+   "id": "acc72e1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "12e1c13b",
+   "id": "bab15f81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,14 +200,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1486c262",
+   "id": "8fa988c8",
    "metadata": {},
    "outputs": [],
    "source": [
     "def application_model(df, model, threshold):\n",
     "    \n",
     "    result_df = copy.deepcopy(df)\n",
-    "    \n",
+    " \n",
     "    # On prédit les probabilité selon le modèle\n",
     "    # Prédiction d'avoir un prêt\n",
     "    result_df[\"proba_pred_pret\"] = model.predict_proba(df)[:, 0]\n",
@@ -220,14 +220,14 @@
     "    \n",
     "    result_df[\"prediction_pret\"] = np.where(result_df[\"prediction\"] == 1, \"Non pret\", \"Pret\")\n",
     "    result_df = scoring_pret(result_df, threshold)\n",
-    "    \n",
+    "\n",
     "    return result_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c7f63a11",
+   "id": "6a4bb0f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6d404566",
+   "id": "00051420",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0909f81e",
+   "id": "64095b70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,9 @@
     "    # On ne sélectionne que les features\n",
     "    cols_num = [cols_num for cols_num, val in zip(cumsum.index, cumsum) if val <= variance_threshold]\n",
     "    \n",
-    "    return df[df.index.isin(cols_num)]\n",
+    "    sorted_df = copy.copy(df.loc[df.index.isin(cols_num), :]) \n",
+    "    \n",
+    "    return sorted_df\n",
     "\n",
     "def figure_feature_importance_dash(df, feats, importance, size, variance_importance = 0.9, color_point = \"plotly\", list_feat = None):\n",
     "    ## \n",
@@ -403,7 +405,6 @@
     "    #    variance_importance = 0.5 : On affiche les variables qui ont 50 % du poids du modèle \n",
     "    #    variance_importance = 1 : On affiche l'ensemble des variables qui contribue au modèle\n",
     "    ##\n",
-    "    \n",
     "    \n",
     "    # on ajuste la couleur des barres du graphique\n",
     "    if color_point == \"colorblind\":\n",
@@ -415,7 +416,8 @@
     "        \n",
     "    mask = feature_importance_threshold(df, feats, importance, variance_importance)\n",
     "    \n",
-    "    mask.sort_values(importance, ascending = True, inplace = True)\n",
+    "\n",
+    "    mask.sort_values(by=importance, ascending = True, inplace = True)\n",
     "    \n",
     "    # Permet de standardiser la taille du nom des variables, selon la taille du texte\n",
     "    mask[\"truncated\"] = mask[feats].str[:(60 - size)]\n",
@@ -430,6 +432,7 @@
     "                   )\n",
     "        \n",
     "    # Si on a une liste de features sélectionnées, on les met en avant\n",
+    "    \n",
     "    if list_feat:\n",
     "        colors = [color_bar_selected if f in list_feat else color_bar for f in mask[feats]]\n",
     "        figure.update_traces(marker_color=colors)\n",
@@ -437,6 +440,7 @@
     "        figure.update_traces(marker_color=color_bar)\n",
     "        \n",
     "    figure.update_yaxes(ticktext=mask[\"truncated\"], tickvals=list(range(len(mask[\"truncated\"]))))\n",
+    "    \n",
     "    figure.update_layout(\n",
     "        title=dict(\n",
     "            text = (\n",
@@ -455,7 +459,6 @@
     "            tickvals=list(range(mask.shape[0])),  \n",
     "            dtick=1,  \n",
     "            automargin=True)\n",
-    "    \n",
     "    )\n",
     "    # On retourne la figure\n",
     "    return figure\n"
@@ -463,7 +466,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
+   "id": "556be2d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_df = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "625a6474",
    "metadata": {
     "scrolled": false
@@ -484,122 +497,11 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x24331525190>"
+       "<IPython.lib.display.IFrame at 0x21193a4cf10>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\33664\\AppData\\Local\\Temp\\ipykernel_5996\\4123539324.py:39: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\33664\\AppData\\Local\\Temp\\ipykernel_5996\\4123539324.py:42: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\33664\\AppData\\Local\\Temp\\ipykernel_5996\\4123539324.py:39: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\33664\\AppData\\Local\\Temp\\ipykernel_5996\\4123539324.py:42: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\33664\\AppData\\Local\\Temp\\ipykernel_5996\\4123539324.py:39: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\33664\\AppData\\Local\\Temp\\ipykernel_5996\\4123539324.py:42: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\33664\\AppData\\Local\\Temp\\ipykernel_5996\\4123539324.py:39: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\33664\\AppData\\Local\\Temp\\ipykernel_5996\\4123539324.py:42: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\33664\\AppData\\Local\\Temp\\ipykernel_5996\\4123539324.py:39: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\33664\\AppData\\Local\\Temp\\ipykernel_5996\\4123539324.py:42: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\33664\\AppData\\Local\\Temp\\ipykernel_5996\\4123539324.py:39: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\33664\\AppData\\Local\\Temp\\ipykernel_5996\\4123539324.py:42: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\33664\\AppData\\Local\\Temp\\ipykernel_5996\\4123539324.py:39: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\33664\\AppData\\Local\\Temp\\ipykernel_5996\\4123539324.py:42: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -780,6 +682,7 @@
     "    \n",
     "    global file_df\n",
     "    global file_df_client_score\n",
+    "    \n",
     "    # On charge le fichier \n",
     "    if content is not None: \n",
     "        content_type, content_string = content.split(\",\")\n",
@@ -805,19 +708,29 @@
     "    # Par défaut, si aucun fichier de chargé\n",
     "    if file_df is None :\n",
     "        table1, table2 = dash_table.DataTable(), dash_table.DataTable()\n",
-    "        figure_score, figure_variables, figure_feat_imp, figure_feature_importance_client = px.scatter(), px.scatter(), px.bar(), px.bar()\n",
+    "        figure_score, figure_variables, figure_feature_importance_client = px.scatter(height=0), px.scatter(height=0), px.bar(height=0)\n",
     "        option_drop_var, option_drop_clients, option_drop_var_graph, option_client_variable = [], [], [], []\n",
-    "        selected_affichage = None\n",
+    "        selected_affichage, content = None, None,\n",
     "        n_clicks_dl_file_all, n_clicks_dl_file_clients = 0, 0\n",
-    "        return table1, table2, figure_score, option_drop_var, option_drop_clients, option_drop_var_graph, selected_affichage, figure_variables, figure_feat_imp, n_clicks_file, content, None, n_clicks_dl_file_all, n_clicks_dl_file_clients, option_client_variable\n",
+    "        figure_feat_imp = figure_feature_importance_dash(feature_importance, \"Features\", \"Importance\", font_size, variance_importance, color_point, selected_variable)\n",
+    "        \n",
+    "        return (table1, table2, \n",
+    "                figure_score, option_drop_var, \n",
+    "                    option_drop_clients, option_drop_var_graph, \n",
+    "                        selected_affichage, figure_variables, \n",
+    "                            figure_feat_imp, n_clicks_file, content, \n",
+    "                                None, n_clicks_dl_file_all, \n",
+    "                                    n_clicks_dl_file_clients, figure_feature_importance_client, option_client_variable)\n",
     "    \n",
     "    elif file_df is not None :\n",
     "        # On met à jour la liste de dropdown\n",
     "        # La liste de variable est dépendante de la liste de feature importance\n",
-    "        \n",
+    "\n",
     "        feat_imp_threshold = feature_importance_threshold(feature_importance, \"Features\", \"Importance\", variance_importance).Features.values\n",
     "        option_drop_var=[{'label': str(var), 'value': var} for var in [col for col in feat_imp_threshold]]\n",
     "        option_drop_clients=[{'label': str(client), 'value': client} for client in file_df['SK_ID_CURR']]\n",
+    "\n",
+    "        # On prend la colonne ID client et les dernières colonnes liées à la prédiction crédit\n",
     "        cols = [0] + list(range(-6, 0))\n",
     "\n",
     "        if selected_client == []:\n",
@@ -849,6 +762,7 @@
     "                page_size=10,\n",
     "                style_table={'overflowX': 'auto'}\n",
     "            )\n",
+    "\n",
     "        if scoring_choisie == \"score\" :\n",
     "            threshold = 0\n",
     "            textH = threshold + 5\n",
@@ -858,7 +772,7 @@
     "            threshold = 1 - proba_threshold\n",
     "            textH = threshold + 0.05\n",
     "            textB = threshold - 0.05\n",
-    "            \n",
+    " \n",
     "        if scoring_choisie in [\"score\", \"proba_pred_pret\"]:\n",
     "            figure_score = px.strip(file_df, y=scoring_choisie,\n",
     "                        # On fait figurer le nom des clients et leur note\n",
@@ -913,7 +827,7 @@
     "                        text = \"Comptage (nombre de client(s))\",\n",
     "                        font=dict(size=20, color=\"black\"),\n",
     "                    ))\n",
-    "        \n",
+    "\n",
     "        figure_score.update_layout(font=dict(size=font_size, color=\"black\"))\n",
     "        \n",
     "        # On revient à la condition initiale\n",
@@ -984,7 +898,6 @@
     "            figure_variables.update_layout(font=dict(size=font_size, color=\"black\"))\n",
     "            if selected_affichage != \"density\":\n",
     "                figure_variables.update_traces(marker=dict(size=point_size))\n",
-    "            \n",
     "\n",
     "        if (type(selected_client) == list) and (selected_client is not None) and (scoring_choisie != \"score_note\"):\n",
     "            # On met à jour les graphiques avec les clients sélectionnés\n",
@@ -1021,7 +934,6 @@
     "                                                marker_line_color=\"black\", marker_line_width=2)\n",
     "                        figure_variables.add_trace(selected_trace_p.data[0])\n",
     "\n",
-    "\n",
     "            if not selected_data_np.empty:\n",
     "                # Mise à jour du graphique score avec les clients sélectionnés\n",
     "                selected_trace_np = px.strip(selected_data_np, y=scoring_choisie, \n",
@@ -1050,36 +962,42 @@
     "                                 ).update_traces(marker_size=point_size+18, name = \"Sélectionné(s)\",\n",
     "                                                marker_line_color=\"black\", marker_line_width=2)\n",
     "                        figure_variables.add_trace(selected_trace_np.data[0])\n",
-    "        \n",
+    "\n",
     "        # On prépare le graphique sur les features importances du modèle\n",
-    "        \n",
     "        figure_feat_imp = figure_feature_importance_dash(feature_importance, \"Features\", \"Importance\", font_size, variance_importance, color_point, selected_variable)        \n",
-    "    \n",
+    "\n",
     "        if selected_client is not None:\n",
     "            option_client_variable = [clients for clients in selected_client]\n",
+    "            \n",
     "            if selected_client_variable is not None:\n",
-    "                \n",
     "                df1 = file_df_client_score[file_df_client_score.SK_ID_CURR == selected_client_variable]\n",
     "                df2 = file_df[file_df.SK_ID_CURR == selected_client_variable]\n",
-    "\n",
-    "                figure_feature_importance_client = figure_feature_client_dash(df1, df2, nb_variable = 10, color_point = \"plotly\", size = 18)            \n",
-    "\n",
+    "                figure_feature_importance_client = figure_feature_client_dash(df1, df2, nb_variable = 10, color_point = color_point, size = font_size)            \n",
+    " \n",
     "        list_var_dl = [\"SK_ID_CURR\", \"score\", \"score_note\"]\n",
-    "        \n",
     "        # On télécharge l'ensemble des données clients\n",
     "        if n_clicks_dl_file_all > 0:\n",
-    "            file_sent = dcc.send_data_frame(file_df[list_var_dl].to_csv, \"Result_prediction_all.csv\")\n",
+    "            file_sent = dcc.send_data_frame(file_df[list_var_dl].to_csv, \"Result_prediction_all.csv\", index=False)\n",
     "            n_clicks_dl_file_all = 0\n",
     "        # On télécharge les données des clients sélectionnés\n",
     "        elif n_clicks_dl_file_clients > 0 :\n",
     "            # Safegard pour éviter toute erreur de téléchargement\n",
     "            if selected_client is not None:\n",
-    "                file_sent = dcc.send_data_frame(file_df.loc[file_df.SK_ID_CURR.isin(selected_client), list_var_dl].to_csv, \"Result_prediction_client.csv\")\n",
+    "                file_sent = dcc.send_data_frame(file_df.loc[file_df.SK_ID_CURR.isin(selected_client), list_var_dl].to_csv, \"Result_prediction_client.csv\", index=False)\n",
+    "            else:\n",
+    "                file_sent = None\n",
     "            n_clicks_dl_file_clients = 0\n",
+    "            \n",
     "        else :\n",
     "            file_sent = None\n",
-    "            \n",
-    "        return table1, table2, figure_score, option_drop_var, option_drop_clients, option_drop_var_graph, selected_affichage, figure_variables, figure_feat_imp, n_clicks_file, content, file_sent, n_clicks_dl_file_all, n_clicks_dl_file_clients, figure_feature_importance_client, option_client_variable \n",
+    "        return (table1, table2, \n",
+    "                figure_score, option_drop_var, \n",
+    "                    option_drop_clients, option_drop_var_graph, \n",
+    "                        selected_affichage, figure_variables, \n",
+    "                        figure_feat_imp, n_clicks_file, \n",
+    "                            content, file_sent, \n",
+    "                                n_clicks_dl_file_all, n_clicks_dl_file_clients, \n",
+    "                                    figure_feature_importance_client, option_client_variable )\n",
     "\n",
     "# Run the app\n",
     "if __name__ == '__main__':\n",
