Correction sur les changements de tailles, espacement etc. Toujours en gestion dynamique

--- a/Halifa_Ruben_2_Dashboard_082023.ipynb
+++ b/Halifa_Ruben_2_Dashboard_082023.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 99,
    "id": "804d3337",
    "metadata": {},
    "outputs": [],
@@ -333,9 +333,11 @@
     "        \n",
     "        # On crée un subplot de 2 lignes, avec une différence de taille entre les 2 figures\n",
     "        fig_general = sp.make_subplots(rows=2, cols=1, row_heights=[9, 1], shared_xaxes=True,\n",
-    "                              subplot_titles=(\"Valeurs par variable\", \n",
+    "                              subplot_titles=(f\"Les 10 variables contribuant le plus <br>à la prédiction du client : {round(client[0])} \", \n",
     "                                              f\"Valeur globale : {'Pas de prêt' if shape_global['valeur'] <= 0 else 'Prêt'}\"),\n",
-    "                              vertical_spacing=0.1)\n",
+    "                              vertical_spacing=0.05)\n",
+    "        \n",
+    "        fig_general.update_annotations(font=dict(size=8+size, color=\"black\"))\n",
     "\n",
     "        # On ajoute la première figure en haut\n",
     "        for trace in figure_var.data:\n",
@@ -351,14 +353,13 @@
     "\n",
     "        fig_general.update_layout(\n",
     "            title=dict(\n",
-    "                text = (f\"Les 10 variables contribuant le plus à la prédiction du client : {round(client[0])} \"),\n",
     "                font=dict(size=8+size, color=\"black\"), x=0.5, xanchor='center'),\n",
     "            \n",
     "            font=dict(size=size, color=\"black\"),\n",
-    "            xaxis=dict(title = \"Importance relative de chaque variable\"),\n",
-    "            yaxis=dict(title = \"Variable(s) d'intérêt(s)\",\n",
+    "            yaxis=dict(title = \"\",#\"Variable(s) d'intérêt(s)\",\n",
     "                tickmode='array', tickvals=list(range(nb_variable + 1)),  \n",
-    "                dtick=1, automargin=True)\n",
+    "                dtick=1, automargin=False),\n",
+    "            margin=dict(l= 200 - ((1 - size / 36) * 30), r=20, t=150, b=20),# on va de 50 à 200 (18 à 36 en taille)\n",
     "        )\n",
     "            \n",
     "        fig_general.add_shape(type=\"line\", x0=0, x1=0, y0=-0.5, y1=nb_variable+0.5,\n",
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 100,
    "id": "0345718b",
    "metadata": {},
    "outputs": [],
@@ -447,20 +448,21 @@
     "        title=dict(\n",
     "            text = (\n",
     "                    f\"{mask.shape[0]} variable{'(s)' if mask.shape[0] > 1 else ''} \"\n",
-    "                    f\"contribue{'nt' if mask.shape[0] > 1 else ''} à expliquer \"\n",
+    "                    f\"contribue{'nt' if mask.shape[0] > 1 else ''} <br>à expliquer \"\n",
     "                    f\"{round(variance_importance * 100)} % du modèle\"\n",
     "                ),\n",
-    "            font=dict(size=4+size, color=\"black\"),\n",
-    "            x=0.5,  # Center the title horizontally\n",
-    "            xanchor='center'\n",
+    "            font=dict(size=8+size, color=\"black\"),\n",
+    "            x=0.5,  \n",
+    "            xanchor='center',\n",
     "        ),\n",
+    "        margin=dict(l=200 - ((1 - size / 36) * 30), r=20, t=150, b=20),# on va de 50 à 200 (18 à 36 en taille)\n",
     "        font=dict(size=size, color=\"black\"),\n",
     "        xaxis=dict(title = \"Importance (valeur absolue)\"),\n",
-    "        yaxis=dict(\n",
+    "        yaxis=dict(title = \"\",\n",
     "            tickmode='array',  \n",
     "            tickvals=list(range(mask.shape[0])),  \n",
     "            dtick=1,  \n",
-    "            automargin=True)\n",
+    "            automargin=False),\n",
     "    )\n",
     "    # On retourne la figure\n",
     "    return figure\n"
@@ -468,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "id": "e4ea798d",
    "metadata": {},
    "outputs": [],
@@ -564,14 +566,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3d56b47a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "id": "23de7850",
    "metadata": {},
@@ -656,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 101,
    "id": "b1d28100",
    "metadata": {
     "scrolled": false
@@ -677,7 +671,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x178de92a950>"
+       "<IPython.lib.display.IFrame at 0x178df6a9ad0>"
       ]
      },
      "metadata": {},
@@ -1271,6 +1265,12 @@
     "            elif ctx.triggered_id == \"font-size-slider\":\n",
     "                for patched in [patched_figure_score, patched_figure_variable, patched_figure_features_model, patched_figure_features_client]:\n",
     "                    patched['layout']['font']['size'] = font_size\n",
+    "                    patched['layout']['title']['font']['size'] = font_size + 8 \n",
+    "                    if patched in [patched_figure_features_model, patched_figure_features_client]:\n",
+    "                        patched['layout']['margin']['l'] = 200 - ((1 - font_size / 36) * 30) # on va de 50 à 200 (18 à 36 en taille)  \n",
+    "                         \n",
+    "                patched_figure_features_client['layout']['annotations'][0]['font']['size'] = font_size + 8\n",
+    "                patched_figure_features_client['layout']['annotations'][1]['font']['size'] = font_size + 8\n",
     "\n",
     "            return patched_figure_score, patched_figure_variable, patched_figure_features_model, patched_figure_features_client, initialize_graph_model \n",
     "        \n",
@@ -1296,6 +1296,7 @@
     "                df1 = file_df_client_score[file_df_client_score.SK_ID_CURR == selected_client_variable]\n",
     "                df2 = file_df[file_df.SK_ID_CURR == selected_client_variable]\n",
     "                figure_feature_importance_client = figure_feature_client_dash(df1, df2, nb_variable = 10, color_point = color_point, size = font_size)            \n",
+    "\n",
     "            # on revient à aucun affichage\n",
     "            else : \n",
     "                figure_feature_importance_client = px.bar() \n",
@@ -1308,7 +1309,11 @@
     "    else :\n",
     "        figure_score = px.scatter() \n",
     "        figure_variable = px.scatter()\n",
-    "        figure_feature_importance_client = px.bar()    \n",
+    "        figure_feature_importance_client = px.bar()  \n",
+    "        \n",
+    "        if ctx.triggered_id in [\"color-palette-dropdown\", \"font-size-slider\"]     :\n",
+    "            figure_feat_imp = figure_feature_importance_dash(feature_importance, \"Features\", \"Importance\", \n",
+    "                                                         font_size, variance_importance, color_point, var_x_y)\n",
     "\n",
     "    return figure_score, figure_variable, figure_feat_imp, figure_feature_importance_client, initialize_graph_model\n",
     "\n",
@@ -1375,16 +1380,8 @@
     "        \n",
     "# Run the app\n",
     "if __name__ == '__main__':\n",
-    "    app.run(debug=True)"
+    "    app.run(debug=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66f9397f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
