Ajout bouton description, ajout stats

--- a/Halifa_Ruben_2_Dashboard_082023.ipynb
+++ b/Halifa_Ruben_2_Dashboard_082023.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 196,
    "id": "4c6d9347",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import dash\n",
     "from dash import Dash, html, dash_table, dcc, callback, Output, Input, State, ctx, Patch\n",
@@ -31,6 +23,8 @@
     "import shap\n",
     "import pickle\n",
     "import time\n",
+    "import scipy\n",
+    "from scipy import stats\n",
     "from mlflow.sklearn import load_model\n"
    ]
   },
@@ -47,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 197,
    "id": "40661cce",
    "metadata": {},
    "outputs": [
@@ -61,7 +55,8 @@
       "numpy Version : 1.23.5\n",
       "mlflow Version : 2.6.0\n",
       "shap Version : 0.42.1\n",
-      "dash_bootstrap_components Version : 1.5.0\n"
+      "dash_bootstrap_components Version : 1.5.0\n",
+      "scipy Version : 1.10.1\n"
      ]
     }
    ],
@@ -73,7 +68,8 @@
     "    \"numpy\" : np,\n",
     "    \"mlflow\" : mlflow,\n",
     "    \"shap\" : shap,\n",
-    "    \"dash_bootstrap_components\": dbc\n",
+    "    \"dash_bootstrap_components\": dbc,\n",
+    "    \"scipy\": scipy,\n",
     "}\n",
     "\n",
     "# On affiche les différentes versions des librairies utilisées\n",
@@ -83,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 221,
    "id": "9d4ae41a",
    "metadata": {},
    "outputs": [],
@@ -470,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 222,
    "id": "e4ea798d",
    "metadata": {},
    "outputs": [],
@@ -566,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 223,
    "id": "23de7850",
    "metadata": {},
    "outputs": [],
@@ -642,8 +638,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "id": "12815742",
+   "execution_count": 224,
+   "id": "56aafbe5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +661,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 243,
+   "id": "2b508cda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_stat(groupe1, groupe2):\n",
+    "    \n",
+    "    # On réalise un t-test\n",
+    "    t_statistic, p_value = stats.ttest_ind(groupe1.dropna(), groupe2.dropna())\n",
+    "\n",
+    "    # On prend un alpa = 0.05\n",
+    "    alpha = 0.05  \n",
+    "\n",
+    "    # On test s'il y a une différence significative ou non entre les 2 groupes\n",
+    "    if p_value < alpha:\n",
+    "        result = \"La moyenne des deux groupes est statistiquement différente\"\n",
+    "    else:\n",
+    "        result = \"La moyenne des deux groupes n'est pas statistiquement différente\"\n",
+    "        \n",
+    "    p_value = \"<0.001\" if p_value < 0.001 else \"{:.3f}\".format(p_value)\n",
+    "\n",
+    "    result = f\"p_value : {p_value}, Résultat : {result}\" \n",
+    "\n",
+    "    return result  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
    "id": "b1d28100",
    "metadata": {
     "scrolled": false
@@ -686,7 +710,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1de575cfcd0>"
+       "<IPython.lib.display.IFrame at 0x1de56f69dd0>"
       ]
      },
      "metadata": {},
@@ -860,14 +884,18 @@
     "                value='strip', inline=True)], style={'width': '50%', 'float': 'right'}),\n",
     "\n",
     "        html.Div([\n",
-    "        dcc.Graph(id=\"graph_pred\", style={'height': '600px', 'width': '50%', 'float': 'left'}),\n",
+    "            html.Div([\n",
+    "            dcc.Graph(id=\"graph_pred\", style={'height': '600px', 'width': '50%', 'float': 'left'}),\n",
     "\n",
-    "        dcc.Graph(id=\"graph_variables\", style={'height': '600px', 'width': '50%', 'float': 'right'}),\n",
+    "            dcc.Graph(id=\"graph_variables\", style={'height': '600px', 'width': '50%', 'float': 'right'}),\n",
     "\n",
-    "        ], style={'display': 'flex', 'flex-direction': 'row', 'width': '100%'}),\n",
-    "        \n",
+    "            ], style={'display': 'flex', 'flex-direction': 'row', 'width': '100%'}),\n",
+    "            html.Div(children=\"\", id='statistique-variables', style={'width': '100%', 'float': 'right'}),\n",
+    "            html.Hr(style={'border-top': '0px solid black'}), # Ligne horizontale\n",
+    "        ], style={'display': 'flex', 'flex-direction': 'column', 'width': '100%'}),\n",
     "         \n",
     "        html.Hr(style={'border-top': '1px solid black'}), # Ligne horizontale\n",
+    "    \n",
     "        html.Div(className='row', children=\"Information sur le modèle et les clients\",\n",
     "            style={'textAlign': 'center', 'color': 'black', 'fontSize': 30}),\n",
     "        \n",
@@ -1389,6 +1417,34 @@
     "\n",
     "    return figure_score, figure_variable, figure_feat_imp, figure_feature_importance_client, initialize_graph_model\n",
     "\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output(component_id=\"statistique-variables\", component_property=\"children\"),\n",
+    "    \n",
+    "    Input(component_id=\"dropdown_variable_x\", component_property=\"value\"),\n",
+    "    Input(component_id=\"dropdown_variable_y\", component_property=\"value\"),\n",
+    "    \n",
+    "    State(component_id=\"fichier_utilisateur\", component_property=\"data\"),\n",
+    ")\n",
+    "\n",
+    "def statistique_affichage(var_x, var_y, fichier_utilisateur):\n",
+    "    resultX = \"\"\n",
+    "    resultY = \"\"\n",
+    "    children = []\n",
+    "    \n",
+    "    if var_x is not None :\n",
+    "        file_df = pd.read_json(fichier_utilisateur, orient='split')\n",
+    "        resultX = test_stat(file_df.loc[file_df.prediction_pret == \"Pret\", var_x], file_df.loc[file_df.prediction_pret == \"Non pret\", var_x])\n",
+    "        resultX = f\"Variable : {var_x}, {resultX}\"  \n",
+    "        children.append(html.P(resultX))\n",
+    "        if var_y is not None :\n",
+    "            resultY = test_stat(file_df.loc[file_df.prediction_pret == \"Pret\", var_y], file_df.loc[file_df.prediction_pret == \"Non pret\", var_y]) \n",
+    "            resultY = f\"Variable : {var_y}, {resultY}\"\n",
+    "            children.append(html.P(resultY))\n",
+    "        children.append(html.P())\n",
+    "    return children \n",
+    "    \n",
+    "\n",
     "@app.callback(\n",
     "    Output(component_id=\"color-palette-dropdown\", component_property=\"value\"),\n",
     "    Output(component_id=\"point-size-slider\", component_property=\"value\"),\n",
@@ -1396,7 +1452,7 @@
     "    Input(component_id=\"reset-button\", component_property=\"n_clicks\"),\n",
     "    Input(component_id=\"del_file_button\", component_property=\"n_clicks\"),\n",
     ")\n",
-    "\n",
+    "     \n",
     "def reset_affichage(n_clicks_reset, n_click_del):\n",
     "   # On reset les valeurs \n",
     "    return initial_palette,initial_point_size, initial_size\n",
@@ -1653,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0b23387",
+   "id": "d6de13ec",
    "metadata": {},
    "outputs": [],
    "source": []
