--- a/Halifa_Ruben_2_Dashboard_082023.ipynb
+++ b/Halifa_Ruben_2_Dashboard_082023.ipynb
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6dacf23c",
+   "id": "230711ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "b1d28100",
    "metadata": {
     "scrolled": false
@@ -727,7 +727,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1bfad75c250>"
+       "<IPython.lib.display.IFrame at 0x1bfacbe0150>"
       ]
      },
      "metadata": {},
@@ -1102,10 +1102,12 @@
     "        if i == 0:\n",
     "            risque_pourcent = fl_risque.loc[fl_risque.Threshold.min(), 'Risque']\n",
     "            nb_client_pourcent = fl_nb_client.loc[fl_nb_client.Threshold.min(), 'Nombre de clients']\n",
+    "            sentence = f\"Risque sans le modèle : {risque_pourcent:.2f} %\"\n",
     "            \n",
     "        elif i == 1:\n",
     "            risque_pourcent = fl_risque.loc[fl_risque.Threshold == initial_threshold, 'Risque'].values[0]\n",
     "            nb_client_pourcent = fl_nb_client.loc[fl_nb_client.Threshold == initial_threshold, 'Nombre de clients'].values[0]\n",
+    "            sentence = f\"Risque avec le modèle : {risque_pourcent:.2f} %\"\n",
     "        else:\n",
     "            if not fl_risque.empty:\n",
     "                risque_pourcent = fl_risque.loc[fl_risque.Threshold == threshold_model, 'Risque'].values[0]\n",
@@ -1115,8 +1117,10 @@
     "                nb_client_pourcent = fl_nb_client.loc[fl_nb_client.Threshold == threshold_model, 'Nombre de clients'].values[0]\n",
     "            else:\n",
     "                nb_client_pourcent = 0\n",
+    "            \n",
+    "            sentence = f\"Risque avec nouveau threshold : {risque_pourcent:.2f} %\"\n",
     "    \n",
-    "        sentence = f\"Risque avec nouveau threshold : {risque_pourcent:.2f} %\"\n",
+    "\n",
     "        sentence2 = f\"Pourcentage de clients solvable trouvable : {nb_client_pourcent:.2f} %\"\n",
     "            \n",
     "        textes.append(html.Div([\n",
@@ -1128,7 +1132,7 @@
     "            ),\n",
     "        ],\n",
     "        style={\n",
-    "            'width': '700px', \n",
+    "            'width': '600px', \n",
     "            'height': '300px',  \n",
     "            'border': '2px solid #000', \n",
     "            'textAlign': 'center', \n",
@@ -1722,7 +1726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0959b45",
+   "id": "afadb8c9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1730,7 +1734,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ad3e1b9",
+   "id": "51a01c30",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1738,7 +1742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8d33d87",
+   "id": "caa38102",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1746,7 +1750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "798cf3b0",
+   "id": "f85e5542",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1833,7 +1837,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cd1dc93",
+   "id": "b442c798",
    "metadata": {},
    "outputs": [],
    "source": [
