Replacement du texte sur les stats

--- a/Halifa_Ruben_2_Dashboard_082023.ipynb
+++ b/Halifa_Ruben_2_Dashboard_082023.ipynb
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "374762db",
+   "id": "751e207d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "2ebc7cbe",
+   "id": "f7e93bf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f7d6f1ce",
+   "id": "fa488225",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b28539b4",
+   "id": "fb7a347e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5c4bb9e7",
+   "id": "7f1e5e21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,6 +825,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temps expiré, It's clearing time\n"
+     ]
     }
    ],
    "source": [
@@ -1008,7 +1015,7 @@
     "            dcc.Graph(id=\"graph_variables\", style={'height': '600px', 'width': '50%', 'float': 'right'}),\n",
     "\n",
     "            ], style={'display': 'flex', 'flex-direction': 'row', 'width': '100%'}),\n",
-    "            html.Div(children=\"\", id='statistique-variables', style={'width': '100%', 'float': 'right'}),\n",
+    "            html.Div(children=\"\", id='statistique-variables', style={'width': '100%', 'float': 'left'}),\n",
     "            html.Hr(style={'border-top': '0px solid black'}), # Ligne horizontale\n",
     "        ], style={'display': 'flex', 'flex-direction': 'column', 'width': '100%'}),\n",
     "         \n",
@@ -1820,7 +1827,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc8de8f9",
+   "id": "62a817eb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1828,7 +1835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bf6d228",
+   "id": "d6f1d986",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1836,7 +1843,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6225ae76",
+   "id": "dec601a4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1844,7 +1851,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "656b5b46",
+   "id": "392f7072",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1870,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "01f4de32",
+   "id": "6e2ec33f",
    "metadata": {},
    "outputs": [
     {
@@ -2323,7 +2330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc0bf4d5",
+   "id": "35a2285e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2367,7 +2374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27ceed4e",
+   "id": "ed3da5bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2377,7 +2384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9594c40",
+   "id": "78d1e63a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2398,7 +2405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8d3010a",
+   "id": "5d46e196",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2443,7 +2450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "367d7c36",
+   "id": "9958143a",
    "metadata": {},
    "outputs": [],
    "source": [
